Fix: Add final comments to code and tidy up redundant CSS classes and rules.

--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <!-- Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
@@ -40,12 +41,13 @@
 
     <!-- Main Content-->
     <main>
-        <div id="div-404">
+        <!-- A clear and concises 404 page with a single intruction to the user on how to get back to the main website. -->
+        <div class="flex-column-centred">
             <h2>Oops!</h2>
             <h3>It seems you may have gotten lost. Please use the links at the top of this page to navigate back to the
                 main website!</h3>
             <div >
-                <img src="assets/images/404-beehive.png" alt="A cartoon beehive dripping with honey"/>
+                <img id='img-404' src="assets/images/404-beehive.png" alt="A cartoon beehive dripping with honey"/>
             </div>
         </div>
 
