--- a/shop.html
+++ b/shop.html
@@ -2,9 +2,11 @@
 <html lang="en">
 
 <head>
+    <!-- Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="West Cork Beekeeping, a group based in the heart of West Cork offering beekeeping courses and products for sale.">
+    <meta name="description"
+        content="West Cork Beekeeping, a group based in the heart of West Cork offering beekeeping courses and products for sale.">
     <meta name="keywords" content="Cork, West Cork, bees, honey, beekeeping, beekeeping courses, beekeeping equipment">
     <meta name="author" content="Simon Henleywillis">
     <!-- Stylesheet -->
@@ -39,22 +41,24 @@
 
     <!-- Main Content-->
     <main>
-        <section id="shop">
+        <!-- Information section of the Shop page describing the ordering process and providing contact details. -->
+        <section id="shop" class="flex-column-centred">
             <h2>Shop</h2>
             <p>To keep our costs low, all payments are taken over the phone. Please email or call us to place your order
                 for collection or delivery.
                 Use your beginner course certificate number for a once-off 10% discount on purchases from our shop.
                 Please note we only offer delivery
                 to the Republic of Ireland and to Northern Ireland.</p>
-            <p>Contact number: <a href="tel:021-12345678"
-                    aria-label="021 12345678">021
+            <p>Contact number: <a href="tel:021-12345678" aria-label="021 12345678">021
                     12345678</a></p>
             <p>Email: <a href="mailto:info@corkbeekeeping.ie"
                     aria-label="info@corkbeekeeping.ie">info@corkbeekeeping.ie</a>
             </p>
             <hr>
+            <!-- List of products available for sale. More can be added without affecting the flow of the divs. -->
+            <!-- Honey Jars -->
             <div id="products-div">
-                <div class="products">
+                <div class="products flex-column-centred">
                     <h3>West Cork Honey</h3>
                     <ul>
                         <li>400ml jars of either solid or runny honey.</li>
@@ -62,9 +66,10 @@
                         <li>3 jars for €20</li>
                     </ul>
                     <img class="shop-img" src="assets/images/two-honey-jars-720-c.webp"
-                        alt="Two jars of clear golden honey sitting on a wooden table."/>
+                        alt="Two jars of clear golden honey sitting on a wooden table." />
                 </div>
-                <div class="products">
+                <!-- Suit -->
+                <div class="products flex-column-centred">
                     <h3>Beekeeper Suit</h3>
                     <ul>
                         <li>Unisex three layer suit with gloves and mesh veil.</li>
@@ -72,9 +77,10 @@
                         <li>€105</li>
                     </ul>
                     <img class="shop-img" src="assets/images/beekeeper-suit-720-c.webp"
-                        alt="White beekeeping suit with protective gloves and veil."/>
+                        alt="White beekeeping suit with protective gloves and veil." />
                 </div>
-                <div class="products">
+                <!-- Beehive -->
+                <div class="products flex-column-centred">
                     <h3>Wooden Beehive - Starter Kit</h3>
                     <ul>
                         <li>5 frame wooden beehive with 10 sheets of honeycomb.</li>
@@ -82,9 +88,10 @@
                         <li>€325</li>
                     </ul>
                     <img class="shop-img" src="assets/images/colourful-beehives-720-c.webp"
-                        alt="A blue wooden beehive in a field."/>
+                        alt="A blue wooden beehive in a field." />
                 </div>
-                <div class="products">
+                <!-- Smoker -->
+                <div class="products flex-column-centred">
                     <h3>Smoker</h3>
                     <ul>
                         <li>Stainless steel smoker with hand bellows</li>
@@ -92,21 +99,21 @@
                         <li>€25</li>
                     </ul>
                     <img class="shop-img" src="assets/images/smoker-720-c.webp"
-                        alt="A metal bee smoker with brown bellows resting on top of a beehive."/>
+                        alt="A metal bee smoker with brown bellows resting on top of a beehive." />
                 </div>
-                <div class="products">
+                <!-- Glass Jars -->
+                <div class="products flex-column-centred">
                     <h3>Glass Jars 400ml - box of 10</h3>
                     <ul>
                         <li>Glass jars with screw-top metal lids.</li>
                         <li>Set of 10 labels included.</li>
                         <li>€15</li>
                     </ul>
-                    <img class="shop-img" src="assets/images/empty-jar-720-c.webp" alt="A clean empty glass jar."/>
+                    <img class="shop-img" src="assets/images/empty-jar-720-c.webp" alt="A clean empty glass jar." />
                 </div>
             </div>
-
-
         </section>
+        <!-- Call-to-Action Signup Button -->
         <div id="sign-up-button">
             <a href="form.html">Sign Up for a Beekeeping Course!</a>
         </div>
