--- a/thank-you.html
+++ b/thank-you.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <!-- Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
@@ -42,12 +43,15 @@
 
     <!-- Main Content-->
     <main>
-            <h2>Thank You!</h2>
-            <p>Your details have been registered and you should receive an email acknowledgement with intructions for payment
-                in
-                the next hour. If you do not recieve this email please get in touch with us.</p>
-            <h3>You will be redirected to the homepage in 10 seconds.</h3>
-            <p>If you are not redirected within 10 seconds please use the link at the top of the page to navigate back to the homepage.</p>
+        <!-- This page informs the user their details have been registered and that they will soon be redirected back to the homepage. -->
+        <h2>Thank You!</h2>
+        <p>Your details have been registered and you should receive an email acknowledgement with intructions for
+            payment
+            in
+            the next hour. If you do not recieve this email please get in touch with us.</p>
+        <h3>You will be redirected to the homepage in 10 seconds.</h3>
+        <p>If you are not redirected within 10 seconds please use the link at the top of the page to navigate back to
+            the homepage.</p>
     </main>
 
     <!-- Footer Content -->
