Fix: Correct typo in thank-you.html.

--- a/thank-you.html
+++ b/thank-you.html
@@ -48,7 +48,7 @@
         <p>Your details have been registered and you should receive an email acknowledgement with intructions for
             payment
             in
-            the next hour. If you do not recieve this email please get in touch with us.</p>
+            the next hour. If you do not receive this email please get in touch with us.</p>
         <h3>You will be redirected to the homepage in 10 seconds.</h3>
         <p>If you are not redirected within 10 seconds please use the link at the top of the page to navigate back to
             the homepage.</p>
