--- a/404.html
+++ b/404.html
@@ -41,7 +41,7 @@
 
     <!-- Main Content-->
     <main>
-        <!-- A clear and concises 404 page with a single intruction to the user on how to get back to the main website. -->
+        <!-- A clear and concise 404 page with a single intruction to the user on how to get back to the main website. -->
         <div class="flex-column-centred">
             <h2>Oops!</h2>
             <h3>It seems you may have gotten lost. Please use the links at the top of this page to navigate back to the
