--- a/thank-you.html
+++ b/thank-you.html
@@ -46,12 +46,9 @@
         <!-- This page informs the user their details have been registered and that they will soon be redirected back to the homepage. -->
         <h2>Thank You!</h2>
         <p>Your details have been registered and you should receive an email acknowledgement with intructions for
-            payment
-            in
-            the next hour. If you do not receive this email please get in touch with us.</p>
+            payment in the next hour. If you do not receive this email please get in touch with us.</p>
         <h3>You will be redirected to the homepage in 10 seconds.</h3>
-        <p>If you are not redirected within 10 seconds please use the link at the top of the page to navigate back to
-            the homepage.</p>
+        <p>If you are not redirected within 10 seconds please use the link at the top of the page to navigate back to the homepage.</p>
     </main>
 
     <!-- Footer Content -->
