--- a/index.html
+++ b/index.html
@@ -55,11 +55,7 @@
                     committed to sharing our expertise through comprehensive beekeeping courses. Join us as we delve
                     into the intricate world of bees, appreciating the harmony they bring to our
                     environment and fostering a sustainable connection with nature.</p>
-                <!-- A set of two images with classes that either show or hide them on mobile screen and larger screens.
-                    These classes were utilised in an effort to improve the page's Lighthouse scores for mobile screens. -->
-                <img class="main-images mobile-img" src="assets/images/three-beekeepers-360-c.webp"
-                    alt="Three smiling beekeepers standing amongst heehives in sunny woodland" />
-                <img class="main-images larger-img" src="assets/images/three-beekeepers-720-c.webp"
+                <img class="main-images" src="assets/images/three-beekeepers-360-c.webp"
                     alt="Three smiling beekeepers standing amongst heehives in sunny woodland" />
             </div>
         </section>
@@ -73,9 +69,7 @@
                     a vital role in our ecosystem as pollinators for many species of flowers and plants, aiding in their
                     reproduction. Many foods we rely on for nutrition and agricultural
                     productivity depends on pollination by bees, such as fruits, vegetables, and nuts.</p>
-                <img class="tablet-wide-crop main-images mobile-img" src="assets/images/bee-nectar-360-c.webp"
-                    alt="A closeup of a bee on a pink flower with pollen on its knees." />
-                <img class="tablet-wide-crop main-images larger-img" src="assets/images/bee-nectar-720-c.webp"
+              <img class="tablet-wide-crop main-images" src="assets/images/bee-nectar-720-c.webp"
                     alt="A closeup of a bee on a pink flower with pollen on its knees." />
                 <p>Despite their importance, honey bees face numerous threats, including habitat loss, pesticide
                     exposure, diseases, and climate change. Efforts to protect and conserve honey bee
@@ -92,14 +86,10 @@
             <!-- Invitation to explore the courses page -->
             <div class="invite flex-column-centred"> 
                 <h3>Beekeeping Courses</h3>
-                <!-- As above, a set of two images with classes that either show or hide them on mobile screen and larger screens.
-                    These classes were utilised in an effort to improve the page's Lighthouse scores for mobile screens. -->
-                <a href="courses.html" aria-label="Go to our Beekeeping Courses page (opens in the same tab)"><img
-                        src="assets/images/beekpeer-hive-rack-360-c.webp"
+                <a href="courses.html" aria-label="Go to our Beekeeping Courses page (opens in the same tab)">
+                        <img src="assets/images/beekpeer-hive-rack-360-c.webp"
                         alt="A beekeeper holding a rack of honeycomb over a beehive."
-                        class="invitation-images mobile-img" /><img src="assets/images/beekpeer-hive-rack-720-c.webp"
-                        alt="A beekeeper holding a rack of honeycomb over a beehive."
-                        class="invitation-images larger-img" /></a>
+                        class="invitation-images" /></a>
                 <p>Embark on a journey into the world of beekeeping and unlock the secrets of these vital pollinators by
                     enrolling in our immersive course. <span class='mobile'>Tap</span><span class='desktop'>Click</span>
                     the image above to learn more.
@@ -109,11 +99,9 @@
             <!-- Invitation to explore the shop page -->
             <div class="invite flex-column-centred"> 
                 <h3>Local Honey</h3>
-                <a href="shop.html" aria-label="Go to our Shop page (opens in the same tab)"><img
-                    src="assets/images/honey-jars-360-c.webp" alt="Shelves of golden honey in labelled jars."
-                    class="invitation-images mobile-img" /><img
-                    src="assets/images/honey-jars-720-c.webp" alt="Shelves of golden honey in labelled jars."
-                    class="invitation-images larger-img" /></a>
+                <a href="shop.html" aria-label="Go to our Shop page (opens in the same tab)">
+                    <img src="assets/images/honey-jars-360-c.webp" alt="Shelves of golden honey in labelled jars."
+                    class="invitation-images" /></a>
                 <p>Savor the sweetness of nature with our West Cork honey. Visit our shop page to purchase your jar of
                     liquid gold and experience the pure, rich flavors captured
                     by our passionate beekeeping team. <span class='mobile'>Tap</span><span class='desktop'>Click</span>
