--- a/courses.html
+++ b/courses.html
@@ -143,12 +143,8 @@
                         needs of your bees, an understanding of seasonal changes,
                         and an appreciation for the delicate balance of ecosystems. It can be a meditative and grounding
                         experience.</p>
-                    <!-- A set of two images with classes that either show or hide them on mobile screen and larger screens.
-                        These classes were utilised in an effort to improve the page's Lighthouse scores for mobile screens. -->
-                    <img class="tablet-wide-crop main-images larger-img"
+                    <img class="tablet-wide-crop main-images"
                         src="assets/images/smiling-beekeeper-720-c.webp"
-                        alt="A smiling beekeeper standing in a sunny field." /><img
-                        class="tablet-wide-crop main-images mobile-img" src="assets/images/smiling-beekeeper-360-c.webp"
                         alt="A smiling beekeeper standing in a sunny field." />
                 </div>
                 <!-- Reason Two -->
@@ -157,9 +153,8 @@
                     <p>One of the most obvious benefits of beekeeping is the production of honey. Harvesting your own
                         honey is not only a delicious reward for your efforts but can
                         also be a source of potential income or a unique gift for friends and family.</p>
-                    <img class="tablet-wide-crop main-images larger-img" src="assets/images/honeycomb-720-c.webp"
-                        alt="A closeup of honeycomb full of honey" /><img
-                        class="tablet-wide-crop main-images mobile-img" src="assets/images/honeycomb-360-c.webp"
+                    <img class="tablet-wide-crop main-images" 
+                        src="assets/images/honeycomb-720-c.webp"
                         alt="A closeup of honeycomb full of honey" />
                 </div>
                 <!-- Reason Three -->
@@ -169,9 +164,8 @@
                         flowers. By becoming a beekeeper, you actively participate in
                         supporting local ecosystems. Healthy bee populations are essential for biodiversity and food
                         production.</p>
-                    <img class="tablet-wide-crop main-images larger-img" src="assets/images/bees-lavender-720-c.webp"
-                        alt="Two bees gathering pollen from purple flowers" /><img
-                        class="tablet-wide-crop main-images mobile-img" src="assets/images/bees-lavender-360-c.webp"
+                    <img class="tablet-wide-crop main-images" 
+                        src="assets/images/bees-lavender-720-c.webp"
                         alt="Two bees gathering pollen from purple flowers" />
                 </div>
                 <!-- Reason Four -->
@@ -180,9 +174,8 @@
                     <p>Many beekeepers find the process of working with bees to be therapeutic. The rhythmic hum of the
                         hive, the focused attention
                         required, and the overall pace of beekeeping can be a great way to unwind and reduce stress.</p>
-                    <img class="tablet-wide-crop main-images larger-img" src="assets/images/single-beekeeper-720-c.webp"
-                        alt="A beekeeper wearing protective clothing carefully examing their beehive" /><img
-                        class="tablet-wide-crop main-images mobile-img" src="assets/images/single-beekeeper-360-c.webp"
+                    <img class="tablet-wide-crop main-images" 
+                        src="assets/images/single-beekeeper-720-c.webp"
                         alt="A beekeeper wearing protective clothing carefully examing their beehive" />
                 </div>
             </div>
