--- a/shop.html
+++ b/shop.html
@@ -49,8 +49,7 @@
                 Use your beginner course certificate number for a once-off 10% discount on purchases from our shop.
                 Please note we only offer delivery
                 to the Republic of Ireland and to Northern Ireland.</p>
-            <p>Contact number: <a href="tel:021-12345678" aria-label="021 12345678">021
-                    12345678</a></p>
+            <p>Contact number: <a href="tel:021-12345678" aria-label="021 12345678">021 12345678</a></p>
             <p>Email: <a href="mailto:info@corkbeekeeping.ie"
                     aria-label="info@corkbeekeeping.ie">info@corkbeekeeping.ie</a>
             </p>
