Feat: Add indication that phone number is a required field in the form.

--- a/form.html
+++ b/form.html
@@ -62,7 +62,7 @@
                     <div>
                         <label for="phone">Phone Number: </label>
                         <!-- Add phone number pattern of 8, 9, or 10 digits to account for the different types of Irish phone number formats. --> 
-                        <input type="tel" name="phone" id="phone" autocomplete='on' placeholder="00000000" pattern="[0-9]{8}|[0-9]{9}|[0-9]{10}" required>
+                        <input type="tel" name="phone" id="phone" autocomplete='on' placeholder="00000000 (*Required)" pattern="[0-9]{8}|[0-9]{9}|[0-9]{10}" required>
                     </div>
                     <div>
                         <label for="age">Date of Birth: </label>
