--- a/index.html
+++ b/index.html
@@ -44,19 +44,18 @@
 
     <!-- Main Content-->
     <main>
-        <!-- Welcome section that give the users an introduction to the website. -->
+        <!-- Welcome section that gives the users an introduction to the website. -->
         <section id="about-us">
             <h2>Welcome to West Cork Beekeeping!</h2>
             <div class="flex-column-centred">
                 <p>Nestled in the rolling hills of West Cork, our group of dedicated beekeepers have worked together
-                    over the last two decades to establish a thriving beekeeping community.
-                    Since 2002, we have been cultivating and caring for a large number of hives and working towards
-                    protecting the native Irish honey bee in our area. Beyond the honey jars, we're
-                    committed to sharing our expertise through comprehensive beekeeping courses. Join us as we delve
-                    into the intricate world of bees, appreciating the harmony they bring to our
-                    environment and fostering a sustainable connection with nature.</p>
+                    over the last two decades to establish a thriving beekeeping community. Since 2002, we have been
+                    cultivating and caring for a large number of hives and working towards protecting the native Irish
+                    honey bee in our area. Beyond the honey jars, we're committed to sharing our expertise through
+                    comprehensive beekeeping courses. Join us as we delve into the intricate world of bees, appreciating
+                    the harmony they bring to our environment and fostering a sustainable connection with nature.</p>
                 <img class="main-images" src="assets/images/three-beekeepers-360-c.webp"
-                    alt="Three smiling beekeepers standing amongst heehives in sunny woodland" />
+                    alt="Three smiling beekeepers standing amongst beehives in sunny woodland" />
             </div>
         </section>
         <hr>
@@ -64,48 +63,45 @@
         <section id="about-bees">
             <h2>The Irish Honey Bee</h2>
             <div class="flex-column-centred">
-                <p>While often referred to as such, the Irish honey bee is not unique to Ireland. In fact, the same
-                    species of Apis Mellifera is found all throughout Europe. These small creatures play
-                    a vital role in our ecosystem as pollinators for many species of flowers and plants, aiding in their
-                    reproduction. Many foods we rely on for nutrition and agricultural
-                    productivity depends on pollination by bees, such as fruits, vegetables, and nuts.</p>
-              <img class="tablet-wide-crop main-images" src="assets/images/bee-nectar-720-c.webp"
+                <p>While often referred to as such, the Irish honey bee is not unique to Ireland; the same species of
+                    Apis Mellifera is in fact found throughout Europe! These small creatures play a vital role in our
+                    ecosystem as pollinators for many species of flowers and plants, aiding in their reproduction. Many
+                    foods we rely on for nutrition and agricultural productivity depend on pollination by bees, such as
+                    fruits, vegetables, and nuts.</p>
+                <img class="tablet-wide-crop main-images" src="assets/images/bee-nectar-720-c.webp"
                     alt="A closeup of a bee on a pink flower with pollen on its knees." />
                 <p>Despite their importance, honey bees face numerous threats, including habitat loss, pesticide
-                    exposure, diseases, and climate change. Efforts to protect and conserve honey bee
-                    populations are essential for maintaining the health of ecosystems and ensuring global food
-                    security. That is where we come in. As beekeepers, we take enjoyment in our work for the
-                    pleasure it brings us; however, in a time where bees find themselves at a real risk of extinction,
-                    we beekeepers have an important role to play in preserving and nurturing
-                    these beautiful and noble insects.</p>
+                    exposure, diseases, and climate change. Efforts to protect and conserve honey bee populations are
+                    essential for maintaining the health of ecosystems and ensuring global food security. That is where
+                    we come in. As beekeepers, we take enjoyment in our work for the pleasure it brings us; however, at
+                    a time when bees find themselves at a real risk of extinction, we beekeepers have an important role
+                    to play in preserving and nurturing these beautiful and noble insects.</p>
             </div>
         </section>
         <hr>
         <!-- Section inviting the user to explore the two other main pages on the website -->
-        <section id="short-descriptions"> 
+        <section id="short-descriptions">
             <!-- Invitation to explore the courses page -->
-            <div class="invite flex-column-centred"> 
+            <div class="invite flex-column-centred">
                 <h3>Beekeeping Courses</h3>
                 <a href="courses.html" aria-label="Go to our Beekeeping Courses page (opens in the same tab)">
-                        <img src="assets/images/beekpeer-hive-rack-360-c.webp"
-                        alt="A beekeeper holding a rack of honeycomb over a beehive."
-                        class="invitation-images" /></a>
+                    <img src="assets/images/beekeeper-hive-rack-360-c.webp"
+                        alt="A beekeeper holding a rack of honeycomb over a beehive." class="invitation-images" /></a>
                 <p>Embark on a journey into the world of beekeeping and unlock the secrets of these vital pollinators by
                     enrolling in our immersive course. <span class='mobile'>Tap</span><span class='desktop'>Click</span>
                     the image above to learn more.
                 </p>
             </div>
-            <hr class="hide-hr hr-75"> 
+            <hr class="hide-hr hr-75">
             <!-- Invitation to explore the shop page -->
-            <div class="invite flex-column-centred"> 
+            <div class="invite flex-column-centred">
                 <h3>Local Honey</h3>
                 <a href="shop.html" aria-label="Go to our Shop page (opens in the same tab)">
                     <img src="assets/images/honey-jars-360-c.webp" alt="Shelves of golden honey in labelled jars."
-                    class="invitation-images" /></a>
+                        class="invitation-images" /></a>
                 <p>Savor the sweetness of nature with our West Cork honey. Visit our shop page to purchase your jar of
-                    liquid gold and experience the pure, rich flavors captured
-                    by our passionate beekeeping team. <span class='mobile'>Tap</span><span class='desktop'>Click</span>
-                    the image above to learn more.
+                    liquid gold and experience the pure, rich flavors captured by our passionate beekeeping team. <span
+                        class='mobile'>Tap</span><span class='desktop'>Click</span> the image above to learn more.
                 </p>
             </div>
         </section>
@@ -120,7 +116,7 @@
         <ul>
             <li>
                 <a href="tel:021-12345678"
-                    aria-label="Call us (opens your phone app or program and autofills our phone number)">
+                    aria-label="Call us (opens your phone app or program and auto-fills our phone number)">
                     <i class="fa-solid fa-phone"></i>
                 </a>
             </li>
