Fix: Final grammar and spelling checks for courses.html.

--- a/courses.html
+++ b/courses.html
@@ -43,7 +43,7 @@
     <main>
         <!-- Section listing the structure of the beginner and intermediate level courses and the upcoming courses for which the user can register. -->
         <section id="courses">
-            <!-- Beginner Course Strucure -->
+            <!-- Beginner Course Structure -->
             <h2>Upcoming Beekeeping Courses</h2>
             <p><strong>Beginner courses</strong> run for six weeks on Saturdays from 12pm to 3pm. No previous
                 experience is required and all equipment is provided.</p>
@@ -90,7 +90,7 @@
             <hr class="hr-75">
             <!-- Intermediate Course Strucure -->
             <p><strong>Intermediate courses</strong> run for eight weeks in the summer months beginning in May
-                and ending in September. You must have previously attended our beginners course or provide
+                and ending in September. You must have previously attended our Beginner course or provide
                 evidence of your beekeeping experience with your own hives. All equipment is provided.
             </p>
             <div>
@@ -139,10 +139,7 @@
                 <!-- Reason One -->
                 <div class="why-div flex-column-centred">
                     <h3>1. Connection with Nature</h3>
-                    <p>Beekeeping encourages a close connection with the natural world. It requires attentiveness to the
-                        needs of your bees, an understanding of seasonal changes,
-                        and an appreciation for the delicate balance of ecosystems. It can be a meditative and grounding
-                        experience.</p>
+                    <p>Beekeeping encourages a close connection with the natural world. It requires attentiveness to the needs of your bees, an understanding of seasonal changes, and an appreciation for the delicate balance of ecosystems. It can be a meditative and grounding experience.</p>
                     <img class="tablet-wide-crop main-images"
                         src="assets/images/smiling-beekeeper-425-c.webp"
                         alt="A smiling beekeeper standing in a sunny field." />
@@ -150,9 +147,7 @@
                 <!-- Reason Two -->
                 <div class="why-div flex-column-centred">
                     <h3>2. Honey Production</h3>
-                    <p>One of the most obvious benefits of beekeeping is the production of honey. Harvesting your own
-                        honey is not only a delicious reward for your efforts but can
-                        also be a source of potential income or a unique gift for friends and family.</p>
+                    <p>One of the most obvious benefits of beekeeping is the production of honey. Harvesting your own honey is not only a delicious reward for your efforts but can also be a source of potential income or a unique gift for friends and family.</p>
                     <img class="tablet-wide-crop main-images" 
                         src="assets/images/honeycomb-425-c.webp"
                         alt="A closeup of honeycomb full of honey" />
@@ -160,10 +155,7 @@
                 <!-- Reason Three -->
                 <div class="why-div flex-column-centred">
                     <h3>3. Positive Environmental Impact</h3>
-                    <p>Bees play a crucial role in pollination, contributing to the growth of fruits, vegetables, and
-                        flowers. By becoming a beekeeper, you actively participate in
-                        supporting local ecosystems. Healthy bee populations are essential for biodiversity and food
-                        production.</p>
+                    <p>Bees play a crucial role in pollination, contributing to the growth of fruits, vegetables, and flowers. By becoming a beekeeper, you actively participate in supporting local ecosystems. Healthy bee populations are essential for biodiversity and food production.</p>
                     <img class="tablet-wide-crop main-images" 
                         src="assets/images/bees-lavender-425-c.webp"
                         alt="Two bees gathering pollen from purple flowers" />
@@ -171,9 +163,7 @@
                 <!-- Reason Four -->
                 <div class="why-div flex-column-centred">
                     <h3>4. Relaxation and Stress Relief</h3>
-                    <p>Many beekeepers find the process of working with bees to be therapeutic. The rhythmic hum of the
-                        hive, the focused attention
-                        required, and the overall pace of beekeeping can be a great way to unwind and reduce stress.</p>
+                    <p>Many beekeepers find the process of working with bees to be therapeutic. The rhythmic hum of the hive, the focused attention required, and the overall pace of beekeeping can be a great way to unwind and reduce stress.</p>
                     <img class="tablet-wide-crop main-images" 
                         src="assets/images/single-beekeeper-425-c.webp"
                         alt="A beekeeper wearing protective clothing carefully examing their beehive" />
@@ -181,10 +171,7 @@
             </div>
             <!-- Disclaimer to the user. -->
             <h3>But...</h3>
-            <p>Remember that beekeeping does require time, effort, and a commitment to learning. It's important to
-                educate yourself about bee behavior, hive management, and
-                potential challenges; however, for those who are passionate about nature, sustainability, and learning,
-                beekeeping can be an incredibly fulfilling and enjoyable pursuit.</p>
+            <p>Remember that beekeeping does require time, effort, and a commitment to learning. It's important to educate yourself about bee behavior, hive management, and potential challenges; however, for those who are passionate about nature, sustainability, and learning, beekeeping can be an incredibly fulfilling and enjoyable pursuit.</p>
         </section>
         <!-- Call-to-Action Signup Button -->
         <div id="sign-up-button">
@@ -197,7 +184,7 @@
         <ul>
             <li>
                 <a href="tel:021-12345678"
-                    aria-label="Call us (opens your phone app or program and autofills our phone number)">
+                    aria-label="Call us (opens your phone app or program and auto-fills our phone number)">
                     <i class="fa-solid fa-phone"></i>
                 </a>
             </li>
