Fix: Final grammar and spelling checks for courses.html.

--- a/courses.html
+++ b/courses.html
@@ -139,39 +139,46 @@
                 <!-- Reason One -->
                 <div class="why-div flex-column-centred">
                     <h3>1. Connection with Nature</h3>
-                    <p>Beekeeping encourages a close connection with the natural world. It requires attentiveness to the needs of your bees, an understanding of seasonal changes, and an appreciation for the delicate balance of ecosystems. It can be a meditative and grounding experience.</p>
-                    <img class="tablet-wide-crop main-images"
-                        src="assets/images/smiling-beekeeper-425-c.webp"
+                    <p>Beekeeping encourages a close connection with the natural world. It requires attentiveness to the
+                        needs of your bees, an understanding of seasonal changes, and an appreciation for the delicate
+                        balance of ecosystems. It can be a meditative and grounding experience.</p>
+                    <img class="tablet-wide-crop main-images" src="assets/images/smiling-beekeeper-425-c.webp"
                         alt="A smiling beekeeper standing in a sunny field." />
                 </div>
                 <!-- Reason Two -->
                 <div class="why-div flex-column-centred">
                     <h3>2. Honey Production</h3>
-                    <p>One of the most obvious benefits of beekeeping is the production of honey. Harvesting your own honey is not only a delicious reward for your efforts but can also be a source of potential income or a unique gift for friends and family.</p>
-                    <img class="tablet-wide-crop main-images" 
-                        src="assets/images/honeycomb-425-c.webp"
+                    <p>One of the most obvious benefits of beekeeping is the production of honey. Harvesting your own
+                        honey is not only a delicious reward for your efforts but can also be a source of potential
+                        income or a unique gift for friends and family.</p>
+                    <img class="tablet-wide-crop main-images" src="assets/images/honeycomb-425-c.webp"
                         alt="A closeup of honeycomb full of honey" />
                 </div>
                 <!-- Reason Three -->
                 <div class="why-div flex-column-centred">
                     <h3>3. Positive Environmental Impact</h3>
-                    <p>Bees play a crucial role in pollination, contributing to the growth of fruits, vegetables, and flowers. By becoming a beekeeper, you actively participate in supporting local ecosystems. Healthy bee populations are essential for biodiversity and food production.</p>
-                    <img class="tablet-wide-crop main-images" 
-                        src="assets/images/bees-lavender-425-c.webp"
+                    <p>Bees play a crucial role in pollination, contributing to the growth of fruits, vegetables, and
+                        flowers. By becoming a beekeeper, you actively participate in supporting local ecosystems.
+                        Healthy bee populations are essential for biodiversity and food production.</p>
+                    <img class="tablet-wide-crop main-images" src="assets/images/bees-lavender-425-c.webp"
                         alt="Two bees gathering pollen from purple flowers" />
                 </div>
                 <!-- Reason Four -->
                 <div class="why-div flex-column-centred">
                     <h3>4. Relaxation and Stress Relief</h3>
-                    <p>Many beekeepers find the process of working with bees to be therapeutic. The rhythmic hum of the hive, the focused attention required, and the overall pace of beekeeping can be a great way to unwind and reduce stress.</p>
-                    <img class="tablet-wide-crop main-images" 
-                        src="assets/images/single-beekeeper-425-c.webp"
+                    <p>Many beekeepers find the process of working with bees to be therapeutic. The rhythmic hum of the
+                        hive, the focused attention required, and the overall pace of beekeeping can be a great way to
+                        unwind and reduce stress.</p>
+                    <img class="tablet-wide-crop main-images" src="assets/images/single-beekeeper-425-c.webp"
                         alt="A beekeeper wearing protective clothing carefully examing their beehive" />
                 </div>
             </div>
             <!-- Disclaimer to the user. -->
             <h3>But...</h3>
-            <p>Remember that beekeeping does require time, effort, and a commitment to learning. It's important to educate yourself about bee behavior, hive management, and potential challenges; however, for those who are passionate about nature, sustainability, and learning, beekeeping can be an incredibly fulfilling and enjoyable pursuit.</p>
+            <p>Remember that beekeeping does require time, effort, and a commitment to learning. It's important to
+                educate yourself about bee behavior, hive management, and potential challenges; however, for those who
+                are passionate about nature, sustainability, and learning, beekeeping can be an incredibly fulfilling
+                and enjoyable pursuit.</p>
         </section>
         <!-- Call-to-Action Signup Button -->
         <div id="sign-up-button">
