Fix: Final grammar and spelling checks for shop.html.

--- a/shop.html
+++ b/shop.html
@@ -71,7 +71,7 @@
                 <div class="products flex-column-centred">
                     <h3>Beekeeper Suit</h3>
                     <ul>
-                        <li>Unisex three layer suit with gloves and mesh veil.</li>
+                        <li>Unisex three-layer suit with gloves and mesh veil.</li>
                         <li>Sizes: Small - Medium - Large</li>
                         <li>€105</li>
                     </ul>
@@ -82,7 +82,7 @@
                 <div class="products flex-column-centred">
                     <h3>Wooden Beehive - Starter Kit</h3>
                     <ul>
-                        <li>5 frame wooden beehive with 10 sheets of honeycomb.</li>
+                        <li>5-frame wooden beehive with 10 sheets of honeycomb.</li>
                         <li>Size: 600L x 450W x 1500H mm</li>
                         <li>€325</li>
                     </ul>
@@ -123,7 +123,7 @@
         <ul>
             <li>
                 <a href="tel:021-12345678"
-                    aria-label="Call us (opens your phone app or program and autofills our phone number)">
+                    aria-label="Call us (opens your phone app or program and auto-fills our phone number)">
                     <i class="fa-solid fa-phone"></i>
                 </a>
             </li>
